force-app/main/default/objects/CI_News_API_Setting__mdt/CI_News_API_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Auth config settings for accessing the news API</description>
    <label>CI News API Setting</label>
    <pluralLabel>CI News API Settings</pluralLabel>
</CustomObject>