force-app/main/default/objects/CI_News_API_Setting__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID for API auth flow</description>
    <label>Client ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>