force-app/main/default/objects/CI_News_API_Setting__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Endpoint URL for API</description>
    <label>Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>