force-app/main/default/objects/CI_News_API_Setting__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for API auth flow</description>
    <label>Password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>