force-app/main/default/objects/CI_News_API_Setting__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for API auth flow</description>
    <label>Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>